# Pybert

./: .gitignore  README.md  bot.py  communications.py  compare_albert.py  dispatch.py  heuristics.py  main.py  monte_carlo.py  moves.py  pyproject.toml  run_7bots.py  run_comparison.py  scratch_score.py  state.py  utils.py
Source/: ApplyInfluenceScores.c  AssignHoldSupports.c  AssignSupportOrder.c  BaseBot.c  BuildAllianceMsg.c  BuildAndSendSUB.c  BuildOrder_CTO.c  BuildOrder_CTO_Chain.C  BuildSupportOpportunities.c  BuildSupportProposals.c  CAL_BOARD.c  CAL_MOVE.c  CancelPriorPress.c  ComputeBuildDelta.c  ComputeDrawVote.c  ComputeInfluenceMatrix.c  ComputePress.c  ComputeSafeReach.c  ComputeWinBuilds_Populate.c  ComputeWinterBuilds.c  ConvoyList_Insert.c  DEVIATE_MOVE.c  DMZ.c  EnumerateConvoyReach.c  EnumerateHoldOrders.c  GameBoard_GetPowerRec.c  GenerateAndSubmitOrders.c  HLO_Dispatch.c  HOSTILITY.c  InitPositionForOrders.c  InitScoringState.c  InsertCandidateRecord.c  InsertOrderCandidate.c  IsLegalMove.c  MoveCandidate.c  NOTDispatcher.c  NOT_XDO.c  NOWHandler.c  NormalizeInfluenceMatrix.c  PROPOSE.c  (+34 more)
bot/: __init__.py  _shared.py  analysis.py  client.py  gof.py  orders.py  strategy.py
communications/: __init__.py  alliance.py  evaluators.py  inbound.py  parsers.py  scheduling.py  senders.py  tokens.py
dispatch/: __init__.py  _errors.py  alliance.py  legality.py  orders.py  validator.py
heuristics/: __init__.py  _primitives.py  board.py  influence.py  scoring.py  snapshot.py  strategy.py  win.py
monte_carlo/: __init__.py  _flags.py  evaluation.py  trial.py  (+1 more)
(+95 files in other folders)
